--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-community/geolocation": "^3.0.4",
+    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.1.2",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.12",
+    "expo-barcode-scanner": "~12.1.0",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "expo-barcode-scanner": "~12.1.0"
+    "react-native-animated-check-mark": "^0.0.2",
+    "react-native-web": "~0.18.9",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
