--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
+    "expo-camera": "~13.1.0",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -24,7 +25,8 @@
     "react-native": "0.70.5",
     "react-native-animated-check-mark": "^0.0.2",
     "react-native-web": "~0.18.9",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
