--- a/package.json
+++ b/package.json
@@ -4,29 +4,39 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "expo start --android --localhost",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-community/geolocation": "^3.0.4",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^1.2.3",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
     "expo-camera": "~13.1.0",
+    "expo-font": "~11.0.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animated-check-mark": "^0.0.2",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "expo-splash-screen": "~0.17.5",
+    "expo-app-loading": "~2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
